@@ -207,9 +207,9 @@ matlabbatch{8}.cfg_basicio.file_move.files(7).tgt_spec{1}(1).name = 'filter';
 matlabbatch{8}.cfg_basicio.file_move.files(7).tgt_spec{1}(1).value = 'image';
 matlabbatch{8}.cfg_basicio.file_move.files(7).tgt_spec{1}(2).name = 'strtype';
 matlabbatch{8}.cfg_basicio.file_move.files(7).tgt_spec{1}(2).value = 'e';
-matlabbatch{8}.cfg_basicio.file_move.files(7).sname = 'VBM8: Estimate & Write: Deformation Field';
-matlabbatch{8}.cfg_basicio.file_move.files(7).src_exbranch = substruct('.','val', '{}',{4}, '.','val', '{}',{1}, '.','val', '{}',{1}, '.','val', '{}',{1});
-matlabbatch{8}.cfg_basicio.file_move.files(7).src_output = substruct('()',{1}, '.','fordef', '()',{':'});
+matlabbatch{8}.cfg_basicio.file_move.files(7).sname = 'VBM8 Realign: Estimate: Realigned Images (Sess 1)';
+matlabbatch{8}.cfg_basicio.file_move.files(7).src_exbranch = substruct('.','val', '{}',{6}, '.','val', '{}',{1}, '.','val', '{}',{1}, '.','val', '{}',{1}, '.','val', '{}',{1}, '.','val', '{}',{1});
+matlabbatch{8}.cfg_basicio.file_move.files(7).src_output = substruct('.','sess', '()',{1}, '.','cfiles');
 matlabbatch{8}.cfg_basicio.file_move.files(8) = cfg_dep;
 matlabbatch{8}.cfg_basicio.file_move.files(8).tname = 'Files to move/copy/delete';
 matlabbatch{8}.cfg_basicio.file_move.files(8).tgt_spec{1}(1).name = 'filter';
@@ -264,13 +264,4 @@ matlabbatch{8}.cfg_basicio.file_move.files(13).tgt_spec{1}(2).value = 'e';
 matlabbatch{8}.cfg_basicio.file_move.files(13).sname = 'VBM8 Realign: Estimate: Realignment Param File (Sess 1)';
 matlabbatch{8}.cfg_basicio.file_move.files(13).src_exbranch = substruct('.','val', '{}',{6}, '.','val', '{}',{1}, '.','val', '{}',{1}, '.','val', '{}',{1}, '.','val', '{}',{1}, '.','val', '{}',{1});
 matlabbatch{8}.cfg_basicio.file_move.files(13).src_output = substruct('.','sess', '()',{1}, '.','rpfile');
-matlabbatch{8}.cfg_basicio.file_move.files(14) = cfg_dep;
-matlabbatch{8}.cfg_basicio.file_move.files(14).tname = 'Files to move/copy/delete';
-matlabbatch{8}.cfg_basicio.file_move.files(14).tgt_spec{1}(1).name = 'filter';
-matlabbatch{8}.cfg_basicio.file_move.files(14).tgt_spec{1}(1).value = 'image';
-matlabbatch{8}.cfg_basicio.file_move.files(14).tgt_spec{1}(2).name = 'strtype';
-matlabbatch{8}.cfg_basicio.file_move.files(14).tgt_spec{1}(2).value = 'e';
-matlabbatch{8}.cfg_basicio.file_move.files(14).sname = 'VBM8 Realign: Estimate: Realigned Images (Sess 1)';
-matlabbatch{8}.cfg_basicio.file_move.files(14).src_exbranch = substruct('.','val', '{}',{6}, '.','val', '{}',{1}, '.','val', '{}',{1}, '.','val', '{}',{1}, '.','val', '{}',{1}, '.','val', '{}',{1});
-matlabbatch{8}.cfg_basicio.file_move.files(14).src_output = substruct('.','sess', '()',{1}, '.','cfiles');
 matlabbatch{8}.cfg_basicio.file_move.action.delete = false;
